[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Windows"
include = [
  "src",
  "*.py",
  "data",
  "django_backend",
  "tests",
  "xl"
]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/build",
  ".git",
  "venv/**",
  "**/bin",
  "**/vendor",
  "**/*.egg-info",
  "**/tmp/**",
  "**/dist",
  "**/backups",
  "**/venv",
  "**/.cache",
  "**/.pytest_cache"
]
extraPaths = [
  "venv/Lib/site-packages",
  "packages/proxy-hunter-python",
  "packages/proxy-checker-python",
  "packages/rsa-utility",
  "packages/selenium-stealth"
]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
reportPropertyTypeMismatch = "error"
reportOptionalMemberAccess = "warning"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
cache_dir = "tmp/pytest"
